--- a/style.css
+++ b/style.css
@@ -76,3 +76,19 @@ span {
     height: auto;
     width: 30rem;
 }
+
+#about-page {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+#social-links {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
