--- a/style.css
+++ b/style.css
@@ -13,6 +13,14 @@
 
 }
 
+section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-height: 100vh;
+}
+
 header {
     position: sticky;
     top: 0;
@@ -49,14 +57,6 @@ nav ul li a {
     /* font-weight: bold; */
 }
 
-#home-page {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    min-height: 100vh;
-}
-
 .text-container {
     width: 35rem;
     font-size: 3rem;
@@ -75,20 +75,4 @@ span {
 .company_logo {
     height: auto;
     width: 30rem;
-}
-
-#about-page {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-#social-links {
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
 }
